# findemail-python

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yml
findemail/: __init__.py
findemail/client/: __init__.py  client.py  clientbase.py  search.py  users.py
findemail/errors/: base.py  search.py
